doc:swagger entry for users/ delete, list, following, followers, likes, submissions
